<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">City Incidents</string>
    <string name="action_settings">Settings</string>
    <string name="user">Email</string>
    <string name="new_user">New User</string>
    <string name="pass">Pass</string>
    <string name="re_pass">Repeat Pass</string>
    <string name="continue_text">Continue</string>
    <string name="cancel_text">Cancel</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="explore">Explore</string>
    <string name="trending_incidents">Trending Incidents</string>
    <string name="new_incident">New Incident</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="img_incident">Incident image</string>
    <string name="img_edit">Edit image</string>
    <string name="view_map">View on map</string>
    <string name="my_incident_fragment">My incidents</string>
    <string name="near_incident_fragment">Near incidents</string>
    <string name="title_incident">Title</string>

    <string name="error_pass">The password doesn´t match</string>
    <string name="error_pass_empty">The password is empty</string>
    <string name="error_user">Incorrect email or password</string>
    <string name="error_new_user_email">Email can´t be blank</string>
    <string name="error_new_user">User can´t be created</string>
    <string name="error_new_incident">Incident can´t be created</string>
    <string name="error_image">Image is needed</string>
    <string name="error_title">Title is needed</string>

    <string name="date">Date</string>
    <string name="create_by">Create by</string>

    <string name="ok_new_user">User create</string>
    <string name="ok_new_incident">Incident create</string>

    <string name="processing_image">Processing image</string>
    <string name="image_process">Image process</string>

    <string name="about_me">About me</string>
    <string name="log_out">Log Out</string>

    <string name="oscar">Oscar Batolo Perez</string>
    <string name="oscar_email">obartolo92@gmail.com</string>
    <string name="developer">Android Developer</string>

</resources>
