
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    tools:context="com.oscarbartolo.cityincidents.ui.AboutMeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oscar"
        android:id="@+id/tvName"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/tvDeveloper"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:id="@+id/tvDeveloper"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oscar_email"
        android:id="@+id/tvEmail"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/tvDeveloper"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
